--- a/src/webgui/templates/peer.html
+++ b/src/webgui/templates/peer.html
@@ -7,7 +7,9 @@
     <h1>STREAMING COMMUNICATION REQUEST</h1>
 
     <form method="post">
-        Enter the ID of the peer: <input name="idp"> <br><br>
+        Enter the ID of the peerA: <input name="idpa"> <br><br>
+
+        Enter the ID of the peerB: <input name="idpb"> <br><br>
     
         Enter the required bandwidth: <input name="band"> <br><br>
     
