--- a/src/webgui/templates/peer_good.html
+++ b/src/webgui/templates/peer_good.html
@@ -8,7 +8,9 @@
     <h1>THE REQUEST HAS BEEN SENT CORRECTLY</h1>
     
     <form method="post">
-        Enter the ID of the peer: <input name="idp"> <br><br>
+        Enter the ID of the peerA: <input name="idpa"> <br><br>
+
+        Enter the ID of the peerB: <input name="idpb"> <br><br>
     
         Enter the required bandwidth: <input name="band"> <br><br>
     
