small modifies to webgui

--- a/src/webgui/templates/admin.html
+++ b/src/webgui/templates/admin.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-    <title>ADMIN PANEL CONTROL </title> 
+    <title>ADMIN CONTROL PANEL</title> 
 </head> 
 <body> 
-    <h1>ADMIN PANEL CONTROL</h1>
+    <h1>ADMIN CONTROL PANEL</h1>
 
     <form action="/add_node" method="post">
         Enter the ID of the new peer: <input name="id"> <br><br>
@@ -19,5 +19,8 @@
     
         <button type="submit">Remove peer</button>
     </form>
+
+    <h1>NETWORK GRAPH</h1>
+    <img src="/static/graph.gv.png"/>
 </body> 
 </html>
