--- a/src/webgui/templates/peer.html
+++ b/src/webgui/templates/peer.html
@@ -6,7 +6,10 @@
 <body> 
     <h1>PEER CONTROL PANEL</h1>
 {%  if status %}
-    <h1> THE REQUEST {{status}}</h1>
+    <h1> REQUEST STATUS: {{status}}</h1>
+{%  endif %}
+{%  if message %}
+    <h1> {{message}}</h1>
 {%  endif %}
     <hr>
     <form method="post">
