--- a/src/webgui/templates/peer.html
+++ b/src/webgui/templates/peer.html
@@ -12,7 +12,7 @@
     <h1> {{message}}</h1>
 {%  endif %}
     <hr>
-    <form method="post">
+    <form action="/peer" method="post">
         Enter the ID of the peerA: <input name="idpa"> <br><br>
 
         Enter the ID of the peerB: <input name="idpb"> <br><br>
