show opening conn

--- a/src/webgui/templates/admin.html
+++ b/src/webgui/templates/admin.html
@@ -52,6 +52,6 @@
     </script>
     <hr>
     <h1>NETWORK GRAPH</h1>
-    <img src="/static/graph.gv.png"/>
+    <img src="/static/graph.gv.png">
 </body> 
 </html>
