--- a/src/webgui/templates/peer.html
+++ b/src/webgui/templates/peer.html
@@ -30,6 +30,10 @@
         <button type="submit">Close the connection</button>
     </form>
     <hr>
+    <h1>OPEN CONNECTIONS</h1>
+{%  if oc %}
+    <h1> {{oc}}</h1>
+{%  endif %}
     
 </body> 
 </html>
